property refactoring checkpoint